# tonlib-rs

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: wallet.rs
core/src/message/: common_msg_info.rs
