[workspace]
members = [
    "core",
]
resolver = "2"

[workspace.package]
version = "0.20.3"
edition = "2021"
description = "Rust SDK for The Open Network"
license = "MIT"
repository = "https://github.com/loki-cmu/tonlib-rs"

[workspace.dependencies]
base64 = "0.22"
bitstream-io = "2.2"
crc = "3"
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
lazy_static = "1"
nacl = "0.5"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
thiserror = "1"
tokio-test = "0.4"
bitvec = "1.0"
ton_liteapi = "0.1.0"
adnl = "2.0"
tonlib-sys = "=2024.9.0"
tokio-tower = "0.6.0"
tower = "0.5.1"

# internal deps
tonlib-core = { version = "0.20", path = "core" }
